--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>Twitter</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/main.css">  
-        
+        <link rel="stylesheet" type="text/css" href="assets/css/main.css">      
     </head>
     <body>
         <nav>
@@ -37,12 +36,11 @@
             </div>
         </header>
         <section>
-            <textarea id="thinkTwitt" class="thinkTwitt" rows="5" cols="35" placeholder="¿Que estás pensando?"></textarea>
+            <textarea id="thinkTwitt" class="thinkTwitt" placeholder="¿Que estás pensando?"></textarea>
             <p class="counter">140</p>
             <button id="twittear" class="twittear">Twittear</button>
             <div class="timeLine" name="lineaDeTiempo"></div>
         </section>
         <script src="assets/js/app.js" type="application/javascript"></script>
     </body>
-
 </html>
